# pyquickref

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  justfile  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  sample_config.yaml
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  run-tests.yml
data/: person.json
examples/: README.md  json_example.json  regex_test.txt
pyquickref/: __init__.py  cli.py  core.py  registry.py  testdata.py
pyquickref/examples/: __init__.py  advanced.py  advanced_oop.py  classes.py  collections_ops.py  concurrency.py  control_flow.py  data_structures.py  design_patterns.py  error_handling.py  file_operations.py  functional.py  iterators_context.py  loops.py  modern.py  modules_packaging.py  practical_patterns.py  stdlib_tools.py  strings.py  testing_debugging.py  type_system.py
pyquickref/utils/: __init__.py  logging.py
scripts/: fix_package.sh  run_tests.sh  setup_dev.sh
tests/: __init__.py  conftest.py  test_advanced.py  test_advanced_oop.py  test_classes.py  test_collections.py  test_concurrency.py  test_control_flow.py  test_data_structures.py  test_design_patterns.py  test_file_operations.py  test_functional.py  test_iterators_context.py  test_loops.py  test_modern.py  test_modules_packaging.py  test_practical_patterns.py  test_registry.py  test_stdlib_tools.py  test_string_operations.py  test_testing_debugging.py  test_type_system.py
