[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyquickref"
version = "0.1.0"
description = "A comprehensive reference for Python functionality with runnable examples"
readme = "README.md"
authors = [
    {name = "PyQuickRef Team", email = "example@example.com"}
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "pytest-cov>=6.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "mypy>=1.3.0",
    "types-PyYAML>=6.0.12.12",  # Add type stubs for PyYAML
    "bandit>=1.7.5",
    "safety>=2.3.5",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[tool.setuptools]
packages = ["pyquickref"]
py-modules = []

[tool.ruff]
# Move line-length, indent-width, and target-version outside of the specific sections
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# Move select and ignore to the lint section
select = ["E", "F", "I", "W", "N", "D", "UP", "ANN", "B", "A", "C4", "SIM", "ERA"]
ignore = ["D203", "D213", "ANN401", "COM812"]  # Added COM812 to ignore list

[tool.ruff.format]
# Like Black, use double quotes for strings
quote-style = "double"
# Like Black, indent with spaces, rather than tabs
indent-style = "space"
# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
# Add the type stubs dependency to solve the import-untyped error for yaml
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Remove coverage options from here since they can cause errors if pytest-cov is not installed
addopts = "-v"
